@@ -1,6 +1,6 @@
 
 
-# This file was automatically generated by tmake at 12:46, 2001/10/30
+# This file was automatically generated by tmake at 17:52, 2001/10/30
 # DO NOT CHANGE THIS FILE, YOUR CHANGES WILL BE LOST! CHANGE B32.T!
 
 #
@@ -138,6 +138,7 @@ COMMONOBJS = \
 		$(MSWDIR)\dobjcmn.obj \
 		$(MSWDIR)\docmdi.obj \
 		$(MSWDIR)\docview.obj \
+		$(MSWDIR)\dseldlg.obj \
 		$(MSWDIR)\dynarray.obj \
 		$(MSWDIR)\dynlib.obj \
 		$(MSWDIR)\effects.obj \
@@ -679,6 +680,8 @@ $(MSWDIR)\dobjcmn.obj: $(COMMDIR)\dobjcmn.$(SRCSUFF)
 $(MSWDIR)\docmdi.obj: $(COMMDIR)\docmdi.$(SRCSUFF)
 
 $(MSWDIR)\docview.obj: $(COMMDIR)\docview.$(SRCSUFF)
+
+$(MSWDIR)\dseldlg.obj: $(COMMDIR)\dseldlg.$(SRCSUFF)
 
 $(MSWDIR)\dynarray.obj: $(COMMDIR)\dynarray.$(SRCSUFF)
 
